2005-06-11  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Add audio_arts.c here to get it disted.

2005-06-06  David Schleef  <ds@schleef.org>

	* MAINTAINERS: add me
	* NEWS: news for new release
	* README: remove old stuff and tell people to go away
	* TODO: remove old stuff
	* configure.ac: version bump

2005-06-06  David Schleef  <ds@schleef.org>

	* Makefile.am: make the docs build correctly, install correctly,
	  and distcheck correctly.
	* configure.ac:
	* docs/Makefile.am:

2005-05-25  David Schleef  <ds@schleef.org>

	* esddsp.c: (dspctl): Patch from Fabian Franz.  Fix
	  behavior of SNDCTL_DSP_GETISPACE ioctl (bug #169680)

2005-05-25  David Schleef  <ds@schleef.org>

	* esdlib.c: Don't write to a const string. (bug #167609)

2005-05-25  David Schleef  <ds@schleef.org>

	* audio_alsa09.c:
	* audio_solaris.c: (esd_audio_devices), (esd_audio_open):
	* esd.c: (open_listen_socket):
	* esd_config.c: (esd_config_read):
	* esddsp.c: (dsp_init), (unlink), (sockaddr_mangle):
	* esdlib.c: (esd_send_auth):
	* genrand.c: (hashlong):
	* players.c: (recorder_write):
	* util.c: (esd_get_socket_dirname):
	  Check all assignments of the return value of getenv() to
	  make sure they're const.  Fix warnings.

2005-05-25  David Schleef  <ds@schleef.org>

	* configure.ac: use AC_CONFIG_SRCDIR() so configure doesn't
	  go wandering off to some random directory (which it does).

2005-03-22  William Jon McCann  <mccann@jhu.edu>

	* esd.c: 
	* esdlib.c: Define SUN_LEN if it isn't already (Solaris)
	  (bug #171304)

2005-05-25  David Schleef  <ds@schleef.org>

	* configure.ac: Use -Wall if the compiler supports it
	* m4/as-compiler-flag.m4: the m4 test

2005-05-25  Kjartan Maraas  <kmaraas@gnome.org>

	* audio_alsa09.c: (print_state):
	* clients.c: (dump_clients):
	* esdctl.c: (main):
	* esddsp.c: (mmapemu_flush), (munmap):
	* esdplay.c: (main):
	* mix.c: (get_translate_func), (refresh_mix_funcs):
	* players.c: (dump_players):
	* proto.c: (poll_client_requests):