@@ -1,5 +1,5 @@
 AC_PREREQ([2.58])
-AC_INIT(esd, 0.2.36)
+AC_INIT(esound, 0.2.36)
 
 ESD_MAJOR_VERSION=0
 ESD_MINOR_VERSION=2
